<resources>
    <string name="app_name">GymApp</string>
    <string name="menu_blog_video">Blogs &amp; \nVideos</string>
    <string name="menu_nutrition_diet">Nutrition \n&amp; Diet</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_workout_planner">Workout \nPlanner</string>
    <string name="menu_setting">Setting</string>


    <string-array name="goal">
        <item>Select your goal</item>
        <item>Fat Loss</item>
        <item>Muscle Gain</item>
        <item>Healthy Lifestyle</item>
        <item>Diabetes Specific lifestyle</item>
    </string-array>

    <string-array name="gender">
        <item>Select your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="physical_activity">
        <item>Select your physical activity</item>
        <item>None</item>
        <item>Usual Walk</item>
        <item>Exercise 1-3 times a week</item>
        <item>Exercise 4-7 times a week</item>
    </string-array>

    <string-array name="access_to">
        <item>Select training type</item>
        <item>Gym Training</item>
        <item>Home Training</item>
    </string-array>

    <string-array name="session_per_week">
        <item>Select session / week</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="select_day">
        <item>Select day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="select_days">
        <item>Select days</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>


    <string-array name="select_goal">
        <item>Specific goal</item>
        <item>Loose belly fat</item>
        <item>Loose love handles</item>
        <item>Increase belly fat</item>
        <item>Loose muscle bicep</item>
    </string-array>


</resources>
