<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_blog"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/menu_blog_video"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_diet"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/menu_nutrition_diet"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_workout"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/menu_workout_planner"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_setting"
        android:enabled="true"
        android:icon="@drawable/ic_music_note"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />

</menu>